Fixed Current Workout Exercise Modal Not scrolling when overflow exists

--- a/ERNDAPP/wwwroot/css/site.css
+++ b/ERNDAPP/wwwroot/css/site.css
@@ -94,7 +94,7 @@ body {
   flex-direction: column;
   transform: translateY(100%);
   transition: transform 0.3s ease-in-out;
-  overflow: hidden;
+  overflow-y: auto;
   z-index: 1050;
 }
 
